--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		    <dependency>
+	      <groupId>org.flywaydb</groupId>
+	      <artifactId>flyway-core</artifactId>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.flywaydb</groupId>
+	      <artifactId>flyway-mysql</artifactId>
+	    </dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
